[package]
name = "tinyrf"
version = "0.1.0"
authors = ["InternetUnexplorer <internetunexplorer@gmail.com>"]
license = "Unlicense"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4.8"
pretty_env_logger = "^0.3.1"
failure = "^0.1.6"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.45"
uuid = { version = "^0.8.1", features = ["serde", "v4"] }
structopt = { version = "0.3.8", default-features = false }
hostname = "^0.3.0"
